// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`library is loaded remove pending indicator and inits echarts with options 1`] = `
<div
  className="line-chart"
  style={
    Object {
      "height": "300px",
      "width": "700px",
    }
  }
>
  <div
    className="line-chart__mount"
    style={
      Object {
        "height": "300px",
        "width": "700px",
      }
    }
  />
</div>
`;

exports[`library is loaded shows empty indicator if chart is empty 1`] = `
<div
  className="line-chart line-chart--empty"
  style={
    Object {
      "height": "300px",
      "width": "700px",
    }
  }
>
  <div
    className="line-chart__mount"
    style={
      Object {
        "height": "300px",
        "width": "700px",
      }
    }
  />
  <FakeEmptyPlaceholder />
</div>
`;

exports[`library is not loaded renders pending indicator even with pending false, because echarts needs to be loaded 1`] = `
<div
  className="line-chart line-chart--loading"
  style={
    Object {
      "height": "300px",
      "width": "700px",
    }
  }
>
  <div
    className="line-chart__mount"
    style={
      Object {
        "height": "300px",
        "width": "700px",
      }
    }
  />
  <Spinner
    color="default"
    size="default"
    testId="cf-ui-spinner"
  />
</div>
`;

exports[`tries to load echarts 1`] = `
<div
  className="line-chart line-chart--loading"
  style={
    Object {
      "height": "300px",
      "width": "700px",
    }
  }
>
  <div
    className="line-chart__mount"
    style={
      Object {
        "height": "300px",
        "width": "700px",
      }
    }
  />
  <Spinner
    color="default"
    size="default"
    testId="cf-ui-spinner"
  />
</div>
`;
